TBW ministers (pic-less for now)

--- a/localisation/KR_Ministers_l_english.yml
+++ b/localisation/KR_Ministers_l_english.yml
@@ -11251,6 +11251,9 @@
   ################################################################################################################################################################################################
 
 	### Head of Government ###
+	 CHL_Carlos_Labarca_hog_tot:0 "Carlos Labarca"
+	 Carlos_Labarca_dead:0 " is incapable of holding any posts."
+	 Carlos_Labarca_hog_fired:0 " is incapable of holding this post."
 	 CHL_CL_Blest_Riffo_hog_syn:0 "C.L. Blest Riffo"
 	 CL_Blest_Riffo_dead:0 " is incapable of holding any posts."
 	 CL_Blest_Riffo_hog_fired:0 " is incapable of holding this post."
@@ -11301,6 +11304,9 @@
 	 Misael_Galleguillos_hog_fired:0 " is incapable of holding this post."
 
 	### Foreign Minister ###
+	 CHL_Carlos_Ignacio_Diaz_Loyola_for_tot:0 "Carlos Ignacio Díaz Loyola"
+	 Carlos_Ignacio_Diaz_Loyola_dead:0 " is incapable of holding any posts."
+	 Carlos_Ignacio_Diaz_Loyola_for_fired:0 " is incapable of holding this post."
 	 CHL_Luis_Arteaga_Garcia_for_syn:0 "Luis Arteaga Garcia"
 	 Luis_Arteaga_Garcia_dead:0 " is incapable of holding any posts."
 	 Luis_Arteaga_Garcia_for_fired:0 " is incapable of holding this post."
@@ -11351,6 +11357,9 @@
 	 Jorge_Gonzalez_von_Marees_for_fired:0 " is incapable of holding this post."
 
 	### Economy Minister ###
+	 CHL_Victor_Contreras_Tapia_eco_tot:0 "Victor Contreras Tapia"
+	 Victor_Contreras_Tapia_dead:0 " is incapable of holding any posts."
+	 Victor_Contreras_Tapia_eco_fired:0 " is incapable of holding this post."
 	 CHL_Augustin_Edwards_eco_syn:0 "Augustin Edwards"
 	 Augustin_Edwards_dead:0 " is incapable of holding any posts."
 	 Augustin_Edwards_eco_fired:0 " is incapable of holding this post."
@@ -11422,6 +11431,9 @@
 	 Ramon_Callis_eco_fired:0 " is incapable of holding this post."
 
 	### Security Minister ###
+	 CHL_Carlos_Labarca_sec_tot:0 "Carlos Labarca"
+	 Carlos_Labarca_dead:0 " is incapable of holding any posts."
+	 Carlos_Labarca_sec_fired:0 " is incapable of holding this post."
 	 CHL_Marmaduke_Grove_sec_syn:0 "Marmaduke Grove"
 	 Marmaduke_Grove_dead:0 " is incapable of holding any posts."
 	 Marmaduke_Grove_sec_fired:0 " is incapable of holding this post."
@@ -11472,6 +11484,9 @@
 	 Carlos_Keller_sec_fired:0 " is incapable of holding this post."
 
 	### Intelligence Minister ###
+	 CHL_Ricardo_Fonseca_Aguayo_int_tot:0 "Ricardo Fonseca Aguayo"
+	 Ricardo_Fonseca_Aguayo_dead:0 " is incapable of holding any posts."
+	 Ricardo_Fonseca_Aguayo_int_fired:0 " is incapable of holding this post."
 	 CHL_Julio_Allard_Pinto_int_syn:0 "Julio Allard Pinto"
 	 Julio_Allard_Pinto_dead:0 " is incapable of holding any posts."
 	 Julio_Allard_Pinto_int_fired:0 " is incapable of holding this post."
@@ -40438,6 +40453,9 @@
 	 PRU_Jose_de_la_Riva_Aguero_hog_pau:0 "José de la Riva Agüero"
 	 Jose_de_la_Riva_Aguero_dead:0 " is incapable of holding any posts."
 	 Jose_de_la_Riva_Aguero_hog_fired:0 " is incapable of holding this post."
+	 PRU_Luis_A_Flores_hog_npo:0 "Luis A. Flores"
+	 Luis_A_Flores_dead:0 " is incapable of holding any posts."
+	 Luis_A_Flores_hog_fired:0 " is incapable of holding this post."
 
 	### Foreign Minister ###
 	 PRU_Eduardo_Cantabria_Gomez_for_syn:0 "Eduardo Cantabria Gomez"
@@ -40482,6 +40500,9 @@
 	 PRU_Felipe_Tudela_for_pau:0 "Felipe Tudela"
 	 Felipe_Tudela_dead:0 " is incapable of holding any posts."
 	 Felipe_Tudela_for_fired:0 " is incapable of holding this post."
+	 PRU_Raul_Ferrero_Rebagliati_for_npo:0 "Raul Ferrero Rebagliati"
+	 Raul_Ferrero_Rebagliati_dead:0 " is incapable of holding any posts."
+	 Raul_Ferrero_Rebagliati_for_fired:0 " is incapable of holding this post."
 
 	### Economy Minister ###
 	 PRU_Constantino_Carvallo_eco_sde:0 "Constantino Carvallo"
@@ -40538,6 +40559,9 @@
 	 PRU_Ernesto_Scroth_eco_ade:0 "Ernesto Scroth"
 	 Ernesto_Scroth_dead:0 " is incapable of holding any posts."
 	 Ernesto_Scroth_eco_fired:0 " is incapable of holding this post."
+	 PRU_Luis_A_Flores_eco_npo:0 "Luis A. Flores"
+	 Luis_A_Flores_dead:0 " is incapable of holding any posts."
+	 Luis_A_Flores_eco_fired:0 " is incapable of holding this post."
 
 	### Security Minister ###
 	 PRU_Antonio_Rodriguez_Ramirez_sec_sde:0 "Antonio Rodríguez Ramírez"
@@ -40582,6 +40606,9 @@
 	 PRU_Rocas_Sanchez_Mapas_sec_ade:0 "Rocas Sanchez Mapás"
 	 Rocas_Sanchez_Mapas_dead:0 " is incapable of holding any posts."
 	 Rocas_Sanchez_Mapas_sec_fired:0 " is incapable of holding this post."
+	 PRU_Felipe_Sassone_sec_npo:0 "Felipe Sassone"
+	 Felipe_Sassone_dead:0 " is incapable of holding any posts."
+	 Felipe_Sassone_sec_fired:0 " is incapable of holding this post."
 
 	### Intelligence Minister ###
 	 PRU_Alberto_Ayala_y_Lacroix_int_sde:0 "Alberto Ayala y Lacroix"
@@ -40623,6 +40650,9 @@
 	 PRU_Oscar_Gilardi_int_ade:0 "Oscar Gilardi"
 	 Oscar_Gilardi_dead:0 " is incapable of holding any posts."
 	 Oscar_Gilardi_int_fired:0 " is incapable of holding this post."
+	 PRU_Clemente_Revilla_int_npo:0 "Clemente Revilla"
+	 Clemente_Revilla_dead:0 " is incapable of holding any posts."
+	 Clemente_Revilla_int_fired:0 " is incapable of holding this post."
 
 	### Military High Command ###
 	 PRU_Alberto_Hurtado_Abadia_mhc_sde:0 "Alberto Hurtado Abadia"
