some tweaks to the AUS.

--- a/localisation/KR_American_Union_State_l_english.yml
+++ b/localisation/KR_American_Union_State_l_english.yml
@@ -509,6 +509,11 @@ unionstate.101.c:0 "Father Caughlin wins with Lindbergh's support"
 unionstate.130.t:0 "The New America"
 unionstate.130.d:0 "The death of Huey Long swept the American Legion into power lead by William Dudley Pelley. This allowed the extremists within the American First to reshape America to their own desires. And today a new dawn has risen in America. Once located to mainly the south, Jim Crow laws now are the law of the land throughout the country. Christianity has been reinforced as the religion of the people and the country."
 unionstate.130.a:0 "God Bless America!"
+unionstate.131.t:0 "Vice President elections"
+unionstate.131.d:0 "Democracy must remain in America, at least for the right kind of Americans. While we shall make sure that all factions remain loyal to the values of our new America. Elections have been called to keep the people happy. Various factions are competing for influence and power. The question though is whom shall win the elections?"
+unionstate.131.a:0 "Lindbergh wins"
+unionstate.131.b:0 "Smith wins with Father Caughlin's support"
+unionstate.131.c:0 "Father Caughlin wins "
 
 unionstate.200.t:0 "America wishes to join Mitteleuropa"
 unionstate.200.d:0 "The American union State has sent us a request to join Mitteleuropa. The industrial might of America would be a great boon to the German Empire, and the Americans have promised to help us do everything they can to destroy syndicalism throughout America. It does help that there many German-Americans in the American Union State government. This alliance would help strengthen the ties between America and Germany, though some wonder if we should ally with such a regime in America."
