Fixed the Polish Election chain so it's no longer purely for modifying ai_chance on who gets elected. Makes it a lot more interesting.

--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -343,9 +343,10 @@ POL_WE_AUS:0 "Elected J.K.W. Fryderyk Krystian Saski"
 POL_WE_GER:0 "Elected J.K.W. Fryderyk Krystian Saski"
 POL_CZA_AUS:0 "Elected J.K.W. Augustyn I Czartoryski"
 POL_CZA_GER:0 "Elected J.K.W. Augustyn I Czartoryski"
-POL_MEN_AUS:0 "Elected J.K.W. Mendog III"
-POL_MEN_GER:0 "Elected J.K.W. Mendog III"
-POL_MEN_LIT:0 "Elected J.K.W. Mendog III"
+POL_MEN_AUS:0 "Elected J.K.D. Mendog III"
+POL_MEN_GER:0 "Elected J.K.D. Mendog III"
+POL_MEN_GER_POSITIVE:0 "Elected J.K.D. Mendog III"
+POL_MEN_LIT:0 "Elected J.K.D. Mendog III"
 POL_HA_AUS:0 "Elected J.K.W. Karl Olbracht Habsburg"
 POL_HA_GER:0 "Elected J.K.W. Karl Olbracht Habsburg"
 POL_ATTEND_INTERNATIONALE:0 "Interested in the Internationale"
@@ -470,8 +471,8 @@ poland.16.a:0 "The Saxon, Friedrich Christian Wettin will lead us to glory!"
 poland.16.b:0 "Austria is our friend, Karl Olbracht Habsburg!"
 poland.16.c:0 "Mendog III will restore the Commonwealth!"
 poland.16.e:0 "We need a Polish King, viva la Augustyn I Czartoryski!"
-poland.17.t:0 "Choosing the King"
-poland.17.d:0 "For over 20 years Poland has not had a King. However, another election by the Regency Council may finally change that. Each potential King has supporters (and opponents) and will provide differing paths for the development of Poland. Who shall become the new King?"
+poland.17.t:0 "Choosing the King - German Interference"
+poland.17.d:0 "For over 20 years Poland has not had a King. However, another election by the Regency Council may finally change that. Each potential King has supporters (and opponents) and will provide differing paths for the development of Poland. \n\nHowever, Berlin has placed great pressure upon the members of the Council to elect their favourtie candidate, Friedrich Christian Wettin. Dare we oppose the will of the Kaiser?"
 poland.17.a:0 "The Saxon, Friedrich Christian Wettin will lead us to glory!"
 poland.17.b:0 "Austria is our friend, Karl Olbracht Habsburg!"
 poland.17.c:0 "We need a Polish King, viva la Augustyn I Czartoryski!"
@@ -480,14 +481,14 @@ poland.18.d:0 "For over 20 years Poland has not had a King. However, another ele
 poland.18.a:0 "The Saxon, Friedrich Christian Wettin will lead us to glory!"
 poland.18.b:0 "Austria is our friend, Karl Olbracht Habsburg!"
 poland.18.c:0 "We need a Polish King, viva la Augustyn I Czartoryski!"
-poland.19.t:0 "Choosing the King"
-poland.19.d:0 "For over 20 years Poland has not had a King. However, another election by the Regency Council may finally change that. Each potential King has supporters (and opponents) and will provide differing paths for the development of Poland. Who shall become the new King?"
+poland.19.t:0 "Choosing the King - German Interference"
+poland.19.d:0 "For over 20 years Poland has not had a King. However, another election by the Regency Council may finally change that. Each potential King has supporters (and opponents) and will provide differing paths for the development of Poland. \n\nHowever, Berlin has placed great pressure upon the members of the Council to elect their favourtie candidate, Mendog III. Dare we oppose the will of the Kaiser?"
 poland.19.a:0 "The Saxon, Friedrich Christian Wettin will lead us to glory!"
 poland.19.b:0 "Austria is our friend, Karl Olbracht Habsburg!"
 poland.19.c:0 "Mendog III will restore the Commonwealth!"
 poland.19.e:0 "We need a Polish King, viva la Augustyn I Czartoryski!"
-poland.20.t:0 "Choosing the King"
-poland.20.d:0 "For over 20 years Poland has not had a King. However, another election by the Regency Council may finally change that. Each potential King has supporters (and opponents) and will provide differing paths for the development of Poland. Who shall become the new King?"
+poland.20.t:0 "Choosing the King - German Interference"
+poland.20.d:0 "For over 20 years Poland has not had a King. However, another election by the Regency Council may finally change that. Each potential King has supporters (and opponents) and will provide differing paths for the development of Poland. \n\nHowever, Berlin has placed great pressure upon the members of the Council to elect their favourtie candidate, Friedrich Christian Wettin. Dare we oppose the will of the Kaiser?"
 poland.20.a:0 "The Saxon, Friedrich Christian Wettin will lead us to glory!"
 poland.20.b:0 "Austria is our friend, Karl Olbracht Habsburg!"
 poland.20.c:0 "Mendog III will restore the Commonwealth!"
