--- a/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -128,27 +128,27 @@ IND_EMP_totalist:0 "Indian Empire"
 IND_EMP_totalist_ADJ:0 "Indian"
 IND_EMP_totalist_DEF:0 "The Indian Empire"
 
-DEH_IND_market_liberalist:0 "India"
-DEH_IND_market_liberalist_ADJ:0 "Indian"
-DEH_IND_market_liberalist_DEF:0 "India"
+DEH_IND_market_liberal:0 "India"
+DEH_IND_market_liberal_ADJ:0 "Indian"
+DEH_IND_market_liberal_DEF:0 "India"
 DEH_IND_national_populist:0 "India"
 DEH_IND_national_populist_ADJ:0 "Indian"
 DEH_IND_national_populist_DEF:0 "India"
-DEH_IND_paternal_autocratist:0 "India"
-DEH_IND_paternal_autocratist_ADJ:0 "Indian"
-DEH_IND_paternal_autocratist_DEF:0 "India"
+DEH_IND_paternal_autocrat:0 "India"
+DEH_IND_paternal_autocrat_ADJ:0 "Indian"
+DEH_IND_paternal_autocrat_DEF:0 "India"
 DEH_IND_radical_socialist:0 "India"
 DEH_IND_radical_socialist_ADJ:0 "Indian"
 DEH_IND_radical_socialist_DEF:0 "India"
-DEH_IND_social_conservatist:0 "India"
-DEH_IND_social_conservatist_ADJ:0 "Indian"
-DEH_IND_social_conservatist_DEF:0 "India"
-DEH_IND_social_democratist:0 "India"
-DEH_IND_social_democratist_ADJ:0 "Indian"
-DEH_IND_social_democratist_DEF:0 "India"
-DEH_IND_social_liberalist:0 "India"
-DEH_IND_social_liberalist_ADJ:0 "Indian"
-DEH_IND_social_liberalist_DEF:0 "India"
+DEH_IND_social_conservative:0 "India"
+DEH_IND_social_conservative_ADJ:0 "Indian"
+DEH_IND_social_conservative_DEF:0 "India"
+DEH_IND_social_democrat:0 "India"
+DEH_IND_social_democrat_ADJ:0 "Indian"
+DEH_IND_social_democrat_DEF:0 "India"
+DEH_IND_social_liberal:0 "India"
+DEH_IND_social_liberal_ADJ:0 "Indian"
+DEH_IND_social_liberal_DEF:0 "India"
 DEH_IND_authoritarian_democrat:0 "India"
 DEH_IND_authoritarian_democrat_ADJ:0 "Indian"
 DEH_IND_authoritarian_democrat_DEF:0 "India"
@@ -156,27 +156,27 @@ DEH_IND_totalist:0 "India"
 DEH_IND_totalist_ADJ:0 "Indian"
 DEH_IND_totalist_DEF:0 "India"
 
-IND_market_liberalist:0 "India"
-IND_market_liberalist_ADJ:0 "Indian"
-IND_market_liberalist_DEF:0 "India"
+IND_market_liberal:0 "India"
+IND_market_liberal_ADJ:0 "Indian"
+IND_market_liberal_DEF:0 "India"
 IND_national_populist:0 "India"
 IND_national_populist_ADJ:0 "Indian"
 IND_national_populist_DEF:0 "India"
-IND_paternal_autocratist:0 "India"
-IND_paternal_autocratist_ADJ:0 "Indian"
-IND_paternal_autocratist_DEF:0 "India"
+IND_paternal_autocrat:0 "India"
+IND_paternal_autocrat_ADJ:0 "Indian"
+IND_paternal_autocrat_DEF:0 "India"
 IND_radical_socialist:0 "India"
 IND_radical_socialist_ADJ:0 "Indian"
 IND_radical_socialist_DEF:0 "India"
-IND_social_conservatist:0 "India"
-IND_social_conservatist_ADJ:0 "Indian"
-IND_social_conservatist_DEF:0 "India"
-IND_social_democratist:0 "India"
-IND_social_democratist_ADJ:0 "Indian"
-IND_social_democratist_DEF:0 "India"
-IND_social_liberalist:0 "India"
-IND_social_liberalist_ADJ:0 "Indian"
-IND_social_liberalist_DEF:0 "India"
+IND_social_conservative:0 "India"
+IND_social_conservative_ADJ:0 "Indian"
+IND_social_conservative_DEF:0 "India"
+IND_social_democrat:0 "India"
+IND_social_democrat_ADJ:0 "Indian"
+IND_social_democrat_DEF:0 "India"
+IND_social_liberal:0 "India"
+IND_social_liberal_ADJ:0 "Indian"
+IND_social_liberal_DEF:0 "India"
 IND_authoritarian_democrat:0 "India"
 IND_authoritarian_democrat_ADJ:0 "Indian"
 IND_authoritarian_democrat_DEF:0 "India"
@@ -1271,27 +1271,27 @@ Siam_MNS_totalist_DEF:0 "The Mon SSR"
 VIE_GER_subject_syndicalist:0 "People's Republic of Vietnam"
 VIE_GER_subject_syndicalist_ADJ:0 "Vietnamese"
 VIE_GER_subject_syndicalist_DEF:0 "The People's Republic of Vietnam"
-VIE_GER_subject_market_liberalist:0 "Kingdom of Vietnam"
-VIE_GER_subject_market_liberalist_ADJ:0 "Vietnamese"
-VIE_GER_subject_market_liberalist_DEF:0 "The Kingdom of Vietnam"
+VIE_GER_subject_market_liberal:0 "Kingdom of Vietnam"
+VIE_GER_subject_market_liberal_ADJ:0 "Vietnamese"
+VIE_GER_subject_market_liberal_DEF:0 "The Kingdom of Vietnam"
 VIE_GER_subject_national_populist:0 "Kingdom of Vietnam"
 VIE_GER_subject_national_populist_ADJ:0 "Vietnamese"
 VIE_GER_subject_national_populist_DEF:0 "The Kingdom of Vietnam"
-VIE_GER_subject_paternal_autocratist:0 "Kingdom of Vietnam"
-VIE_GER_subject_paternal_autocratist_ADJ:0 "Vietnamese"
-VIE_GER_subject_paternal_autocratist_DEF:0 "The Kingdom of Vietnam"
+VIE_GER_subject_paternal_autocrat:0 "Kingdom of Vietnam"
+VIE_GER_subject_paternal_autocrat_ADJ:0 "Vietnamese"
+VIE_GER_subject_paternal_autocrat_DEF:0 "The Kingdom of Vietnam"
 VIE_GER_subject_radical_socialist:0 "People's Republic of Vietnam"
 VIE_GER_subject_radical_socialist_ADJ:0 "Vietnamese"
 VIE_GER_subject_radical_socialist_DEF:0 "The People's Republic of Vietnam"
-VIE_GER_subject_social_conservatist:0 "Kingdom of Vietnam"
-VIE_GER_subject_social_conservatist_ADJ:0 "Vietnamese"
-VIE_GER_subject_social_conservatist_DEF:0 "The Kingdom of Vietnam"
-VIE_GER_subject_social_democratist:0 "Kingdom of Vietnam"
-VIE_GER_subject_social_democratist_ADJ:0 "Vietnamese"
-VIE_GER_subject_social_democratist_DEF:0 "The Kingdom of Vietnam"
-VIE_GER_subject_social_liberalist:0 "Kingdom of Vietnam"
-VIE_GER_subject_social_liberalist_ADJ:0 "Vietnamese"
-VIE_GER_subject_social_liberalist_DEF:0 "The Kingdom of Vietnam"
+VIE_GER_subject_social_conservative:0 "Kingdom of Vietnam"
+VIE_GER_subject_social_conservative_ADJ:0 "Vietnamese"
+VIE_GER_subject_social_conservative_DEF:0 "The Kingdom of Vietnam"
+VIE_GER_subject_social_democrat:0 "Kingdom of Vietnam"
+VIE_GER_subject_social_democrat_ADJ:0 "Vietnamese"
+VIE_GER_subject_social_democrat_DEF:0 "The Kingdom of Vietnam"
+VIE_GER_subject_social_liberal:0 "Kingdom of Vietnam"
+VIE_GER_subject_social_liberal_ADJ:0 "Vietnamese"
+VIE_GER_subject_social_liberal_DEF:0 "The Kingdom of Vietnam"
 VIE_GER_subject_authoritarian_democrat:0 "Kingdom of Vietnam"
 VIE_GER_subject_authoritarian_democrat_ADJ:0 "Vietnamese"
 VIE_GER_subject_authoritarian_democrat_DEF:0 "The Kingdom of Vietnam"
@@ -1299,27 +1299,27 @@ VIE_GER_subject_totalist:0 "People's Republic of Vietnam"
 VIE_GER_subject_totalist_ADJ:0 "Vietnamese"
 VIE_GER_subject_totalist_DEF:0 "The People's Republic of Vietnam"
 
-CAM_GER_subject_market_liberalist:0 "Kingdom of Cambodia"
-CAM_GER_subject_market_liberalist_ADJ:0 "Khmer"
-CAM_GER_subject_market_liberalist_DEF:0 "The Kingdom of Cambodia"
+CAM_GER_subject_market_liberal:0 "Kingdom of Cambodia"
+CAM_GER_subject_market_liberal_ADJ:0 "Khmer"
+CAM_GER_subject_market_liberal_DEF:0 "The Kingdom of Cambodia"
 CAM_GER_subject_national_populist:0 "Khmer Empire"
 CAM_GER_subject_national_populist_ADJ:0 "Khmer"
 CAM_GER_subject_national_populist_DEF:0 "The Khmer Empire"
-CAM_GER_subject_paternal_autocratist:0 "Khmer Empire"
-CAM_GER_subject_paternal_autocratist_ADJ:0 "Khmer"
-CAM_GER_subject_paternal_autocratist_DEF:0 "The Khmer Empire"
+CAM_GER_subject_paternal_autocrat:0 "Khmer Empire"
+CAM_GER_subject_paternal_autocrat_ADJ:0 "Khmer"
+CAM_GER_subject_paternal_autocrat_DEF:0 "The Khmer Empire"
 CAM_GER_subject_radical_socialist:0 "Democratic Kampuchea"
 CAM_GER_subject_radical_socialist_ADJ:0 "Khmer"
 CAM_GER_subject_radical_socialist_DEF:0 "The Democratic Kampuchea"
-CAM_GER_subject_social_conservatist:0 "Kingdom of Cambodia"
-CAM_GER_subject_social_conservatist_ADJ:0 "Khmer"
-CAM_GER_subject_social_conservatist_DEF:0 "The Kingdom of Cambodia"
-CAM_GER_subject_social_democratist:0 "Kingdom of Cambodia"
-CAM_GER_subject_social_democratist_ADJ:0 "Khmer"
-CAM_GER_subject_social_democratist_DEF:0 "The Kingdom of Cambodia"
-CAM_GER_subject_social_liberalist:0 "Kingdom of Cambodia"
-CAM_GER_subject_social_liberalist_ADJ:0 "Khmer"
-CAM_GER_subject_social_liberalist_DEF:0 "The Kingdom of Cambodia"
+CAM_GER_subject_social_conservative:0 "Kingdom of Cambodia"
+CAM_GER_subject_social_conservative_ADJ:0 "Khmer"
+CAM_GER_subject_social_conservative_DEF:0 "The Kingdom of Cambodia"
+CAM_GER_subject_social_democrat:0 "Kingdom of Cambodia"
+CAM_GER_subject_social_democrat_ADJ:0 "Khmer"
+CAM_GER_subject_social_democrat_DEF:0 "The Kingdom of Cambodia"
+CAM_GER_subject_social_liberal:0 "Kingdom of Cambodia"
+CAM_GER_subject_social_liberal_ADJ:0 "Khmer"
+CAM_GER_subject_social_liberal_DEF:0 "The Kingdom of Cambodia"
 CAM_GER_subject_syndicalist:0 "Democratic Kampuchea"
 CAM_GER_subject_syndicalist_ADJ:0 "Khmer"
 CAM_GER_subject_syndicalist_DEF:0 "Democratic Kampuchea"
@@ -1333,27 +1333,27 @@ CAM_GER_subject_syndicalist:0 "Democratic Kampuchea"
 CAM_GER_subject_syndicalist_ADJ:0 "Khmer"
 CAM_GER_subject_syndicalist_DEF:0 "Democratic Kampuchea"
 
-INC_GER_subject_market_liberalist:0 "Freistaat Indochina"
-INC_GER_subject_market_liberalist_ADJ:0 "Indochinese"
-INC_GER_subject_market_liberalist_DEF:0 "Freistaat Indochina"
+INC_GER_subject_market_liberal:0 "Freistaat Indochina"
+INC_GER_subject_market_liberal_ADJ:0 "Indochinese"
+INC_GER_subject_market_liberal_DEF:0 "Freistaat Indochina"
 INC_GER_subject_national_populist:0 "Freistaat Indochina"
 INC_GER_subject_national_populist_ADJ:0 "Indochinese"
 INC_GER_subject_national_populist_DEF:0 "Freistaat Indochina"
-INC_GER_subject_paternal_autocratist:0 "Freistaat Indochina"
-INC_GER_subject_paternal_autocratist_ADJ:0 "Indochinese"
-INC_GER_subject_paternal_autocratist_DEF:0 "Freistaat Indochina"
+INC_GER_subject_paternal_autocrat:0 "Freistaat Indochina"
+INC_GER_subject_paternal_autocrat_ADJ:0 "Indochinese"
+INC_GER_subject_paternal_autocrat_DEF:0 "Freistaat Indochina"
 INC_GER_subject_radical_socialist:0 "Indochinese Union"
 INC_GER_subject_radical_socialist_ADJ:0 "Indochinese"
 INC_GER_subject_radical_socialist_DEF:0 "The Indochinese Union"
-INC_GER_subject_social_conservatist:0 "Freistaat Indochina"
-INC_GER_subject_social_conservatist_ADJ:0 "Indochinese"
-INC_GER_subject_social_conservatist_DEF:0 "Freistaat Indochina"
-INC_GER_subject_social_democratist:0 "Indochinese Union"
-INC_GER_subject_social_democratist_ADJ:0 "Indochinese"
-INC_GER_subject_social_democratist_DEF:0 "The Indochinese Union"
-INC_GER_subject_social_liberalist:0 "Freistaat Indochina"
-INC_GER_subject_social_liberalist_ADJ:0 "Indochinese"
-INC_GER_subject_social_liberalist_DEF:0 "Freistaat Indochina"
+INC_GER_subject_social_conservative:0 "Freistaat Indochina"
+INC_GER_subject_social_conservative_ADJ:0 "Indochinese"
+INC_GER_subject_social_conservative_DEF:0 "Freistaat Indochina"
+INC_GER_subject_social_democrat:0 "Indochinese Union"
+INC_GER_subject_social_democrat_ADJ:0 "Indochinese"
+INC_GER_subject_social_democrat_DEF:0 "The Indochinese Union"
+INC_GER_subject_social_liberal:0 "Freistaat Indochina"
+INC_GER_subject_social_liberal_ADJ:0 "Indochinese"
+INC_GER_subject_social_liberal_DEF:0 "Freistaat Indochina"
 INC_GER_subject_syndicalist:0 "Indochinese Union"
 INC_GER_subject_syndicalist_ADJ:0 "Indochinese"
 INC_GER_subject_syndicalist_DEF:0 "The Indochinese Union"
@@ -1427,34 +1427,34 @@ PHW_totalist_ADJ:0 "Fiipino"
 PHW_totalist_DEF:0 "The Socialist Republic of The Philippines"
 
 AGT_authoritarian_democrat:0 "Argentina"
-AGT_authoritarian_democrat_ADJ:0 "Argentinan"
+AGT_authoritarian_democrat_ADJ:0 "Argentinian"
 AGT_authoritarian_democrat_DEF:0 "Argentina"
 AGT_market_liberal:0 "Argentina"
-AGT_market_liberal_ADJ:0 "Argentinan"
+AGT_market_liberal_ADJ:0 "Argentinian"
 AGT_market_liberal_DEF:0 "Argentina"
 AGT_national_populist:0 "Argentina"
-AGT_national_populist_ADJ:0 "Argentinan"
+AGT_national_populist_ADJ:0 "Argentinian"
 AGT_national_populist_DEF:0 "Argentina"
 AGT_paternal_autocrat:0 "Argentina"
-AGT_paternal_autocrat_ADJ:0 "Argentinan"
+AGT_paternal_autocrat_ADJ:0 "Argentinian"
 AGT_paternal_autocrat_DEF:0 "Argentina"
 AGT_radical_socialist:0 "Argentine Commune"
-AGT_radical_socialist_ADJ:0 "Argentinan"
-AGT_radical_socialist_DEF:0 "The Argentinan Commune"
+AGT_radical_socialist_ADJ:0 "Argentinian"
+AGT_radical_socialist_DEF:0 "The Argentinian Commune"
 AGT_social_conservative:0 "Argentina"
-AGT_social_conservative_ADJ:0 "Argentinan"
+AGT_social_conservative_ADJ:0 "Argentinian"
 AGT_social_conservative_DEF:0 "Argentina"
 AGT_social_democrat:0 "Argentina"
-AGT_social_democrat_ADJ:0 "Argentinan"
+AGT_social_democrat_ADJ:0 "Argentinian"
 AGT_social_democrat_DEF:0 "Argentina"
 AGT_social_liberal:0 "Argentina"
-AGT_social_liberal_ADJ:0 "Argentinan"
+AGT_social_liberal_ADJ:0 "Argentinian"
 AGT_social_liberal_DEF:0 "Argentina"
-AGT_syndicalist:0 "Argentinan Federated Syndicates"
-AGT_syndicalist_ADJ:0 "Argentinan"
+AGT_syndicalist:0 "Argentinian Federated Syndicates"
+AGT_syndicalist_ADJ:0 "Argentinian"
 AGT_syndicalist_DEF:0 "The Argentine Federated Syndicates"
 AGT_totalist:0 "Argentine Commune"
-AGT_totalist_ADJ:0 "Argentinan"
+AGT_totalist_ADJ:0 "Argentinian"
 AGT_totalist_DEF:0 "The Argentine Commune"
 
 UKR_communist_authoritarian_democrat:0 "Socialist Republic of Ukraine"
@@ -2235,27 +2235,27 @@ INS_HOL_national_populist:0 "Dutch East Indies"
 INS_HOL_national_populist_ADJ:0 "Indonesian"
 INS_HOL_national_populist_DEF:0 "The Dutch East Indies"
 
-BRA_ARG_market_liberalist:0 "Brazil"
-BRA_ARG_market_liberalist_ADJ:0 "Brazilian"
-BRA_ARG_market_liberalist_DEF:0 "Brazil"
+BRA_ARG_market_liberal:0 "Brazil"
+BRA_ARG_market_liberal_ADJ:0 "Brazilian"
+BRA_ARG_market_liberal_DEF:0 "Brazil"
 BRA_ARG_national_populist:0 "Brazilian Transitional Goverment"
 BRA_ARG_national_populist_ADJ:0 "Brazilian"
 BRA_ARG_national_populist_DEF:0 "Brazilian Transitional Goverment"
-BRA_ARG_paternal_autocratist:0 "Brazilian Transitional Goverment"
-BRA_ARG_paternal_autocratist_ADJ:0 "Brazilian"
-BRA_ARG_paternal_autocratist_DEF:0 "Brazilian Transitional Goverment"
+BRA_ARG_paternal_autocrat:0 "Brazilian Transitional Goverment"
+BRA_ARG_paternal_autocrat_ADJ:0 "Brazilian"
+BRA_ARG_paternal_autocrat_DEF:0 "Brazilian Transitional Goverment"
 BRA_ARG_radical_socialist:0 "United Communes of Brazil"
 BRA_ARG_radical_socialist_ADJ:0 "Brazilian"
 BRA_ARG_radical_socialist_DEF:0 "United Communes of Brazil"
-BRA_ARG_social_conservatist:0 "Brazil"
-BRA_ARG_social_conservatist_ADJ:0 "Brazilian"
-BRA_ARG_social_conservatist_DEF:0 "Brazil"
-BRA_ARG_social_democratist:0 "Brazil"
-BRA_ARG_social_democratist_ADJ:0 "Brazilian"
-BRA_ARG_social_democratist_DEF:0 "Brazil"
-BRA_ARG_social_liberalist:0 "Brazil"
-BRA_ARG_social_liberalist_ADJ:0 "Brazilian"
-BRA_ARG_social_liberalist_DEF:0 "Brazil"
+BRA_ARG_social_conservative:0 "Brazil"
+BRA_ARG_social_conservative_ADJ:0 "Brazilian"
+BRA_ARG_social_conservative_DEF:0 "Brazil"
+BRA_ARG_social_democrat:0 "Brazil"
+BRA_ARG_social_democrat_ADJ:0 "Brazilian"
+BRA_ARG_social_democrat_DEF:0 "Brazil"
+BRA_ARG_social_liberal:0 "Brazil"
+BRA_ARG_social_liberal_ADJ:0 "Brazilian"
+BRA_ARG_social_liberal_DEF:0 "Brazil"
 BRA_ARG_authoritarian_democrat:0 "Brazilian Transitional Goverment"
 BRA_ARG_authoritarian_democrat_ADJ:0 "Brazilian"
 BRA_ARG_authoritarian_democrat_DEF:0 "Brazilian Transitional Goverment"
@@ -2263,27 +2263,27 @@ BRA_ARG_totalist:0 "United Communes of Brazil"
 BRA_ARG_totalist_ADJ:0 "Brazilian"
 BRA_ARG_totalist_DEF:0 "United Communes of Brazil"
 
-AUS_CIS_market_liberalist:0 "Cisleithanian Austria"
-AUS_CIS_market_liberalist_ADJ:0 "Austrian"
-AUS_CIS_market_liberalist_DEF:0 "Cisleithanian Austria"
+AUS_CIS_market_liberal:0 "Cisleithanian Austria"
+AUS_CIS_market_liberal_ADJ:0 "Austrian"
+AUS_CIS_market_liberal_DEF:0 "Cisleithanian Austria"
 AUS_CIS_national_populist:0 "Cisleithanian Austria"
 AUS_CIS_national_populist_ADJ:0 "Austrian"
 AUS_CIS_national_populist_DEF:0 "Cisleithanian Austria"
-AUS_CIS_paternal_autocratist:0 "Cisleithanian Austria"
-AUS_CIS_paternal_autocratist_ADJ:0 "Austrian"
-AUS_CIS_paternal_autocratist_DEF:0 "Cisleithanian Austria"
+AUS_CIS_paternal_autocrat:0 "Cisleithanian Austria"
+AUS_CIS_paternal_autocrat_ADJ:0 "Austrian"
+AUS_CIS_paternal_autocrat_DEF:0 "Cisleithanian Austria"
 AUS_CIS_radical_socialist:0 "Cisleithanian Austria"
 AUS_CIS_radical_socialist_ADJ:0 "Austrian"
 AUS_CIS_radical_socialist_DEF:0 "Cisleithanian Austria"
-AUS_CIS_social_conservatist:0 "Cisleithanian Austria"
-AUS_CIS_social_conservatist_ADJ:0 "Austrian"
-AUS_CIS_social_conservatist_DEF:0 "Cisleithanian Austria"
-AUS_CIS_social_democratist:0 "Cisleithanian Austria"
-AUS_CIS_social_democratist_ADJ:0 "Austrian"
-AUS_CIS_social_democratist_DEF:0 "Cisleithanian Austria"
-AUS_CIS_social_liberalist:0 "Cisleithanian Austria"
-AUS_CIS_social_liberalist_ADJ:0 "Austrian"
-AUS_CIS_social_liberalist_DEF:0 "Cisleithanian Austria"
+AUS_CIS_social_conservative:0 "Cisleithanian Austria"
+AUS_CIS_social_conservative_ADJ:0 "Austrian"
+AUS_CIS_social_conservative_DEF:0 "Cisleithanian Austria"
+AUS_CIS_social_democrat:0 "Cisleithanian Austria"
+AUS_CIS_social_democrat_ADJ:0 "Austrian"
+AUS_CIS_social_democrat_DEF:0 "Cisleithanian Austria"
+AUS_CIS_social_liberal:0 "Cisleithanian Austria"
+AUS_CIS_social_liberal_ADJ:0 "Austrian"
+AUS_CIS_social_liberal_DEF:0 "Cisleithanian Austria"
 AUS_CIS_authoritarian_democrat:0 "Cisleithanian Austria"
 AUS_CIS_authoritarian_democrat_ADJ:0 "Austrian"
 AUS_CIS_authoritarian_democrat_DEF:0 "Cisleithanian Austria"
@@ -2291,27 +2291,27 @@ AUS_CIS_totalist:0 "Cisleithanian Austria"
 AUS_CIS_totalist_ADJ:0 "Austrian"
 AUS_CIS_totalist_DEF:0 "Cisleithanian Austria"
 
-HUN_TRANS_market_liberalist:0 "Transleithanian Austria"
-HUN_TRANS_market_liberalist_ADJ:0 "Hungarian"
-HUN_TRANS_market_liberalist_DEF:0 "Transleithanian Austria"
+HUN_TRANS_market_liberal:0 "Transleithanian Austria"
+HUN_TRANS_market_liberal_ADJ:0 "Hungarian"
+HUN_TRANS_market_liberal_DEF:0 "Transleithanian Austria"
 HUN_TRANS_national_populist:0 "Transleithanian Austria"
 HUN_TRANS_national_populist_ADJ:0 "Hungarian"
 HUN_TRANS_national_populist_DEF:0 "Transleithanian Austria"
-HUN_TRANS_paternal_autocratist:0 "Transleithanian Austria"
-HUN_TRANS_paternal_autocratist_ADJ:0 "Hungarian"
-HUN_TRANS_paternal_autocratist_DEF:0 "Transleithanian Austria"
+HUN_TRANS_paternal_autocrat:0 "Transleithanian Austria"
+HUN_TRANS_paternal_autocrat_ADJ:0 "Hungarian"
+HUN_TRANS_paternal_autocrat_DEF:0 "Transleithanian Austria"
 HUN_TRANS_radical_socialist:0 "Transleithanian Austria"
 HUN_TRANS_radical_socialist_ADJ:0 "Hungarian"
 HUN_TRANS_radical_socialist_DEF:0 "Transleithanian Austria"
-HUN_TRANS_social_conservatist:0 "Transleithanian Austria"
-HUN_TRANS_social_conservatist_ADJ:0 "Hungarian"
-HUN_TRANS_social_conservatist_DEF:0 "Transleithanian Austria"
-HUN_TRANS_social_democratist:0 "Transleithanian Austria"
-HUN_TRANS_social_democratist_ADJ:0 "Hungarian"
-HUN_TRANS_social_democratist_DEF:0 "Transleithanian Austria"
-HUN_TRANS_social_liberalist:0 "Transleithanian Austria"
-HUN_TRANS_social_liberalist_ADJ:0 "Hungarian"
-HUN_TRANS_social_liberalist_DEF:0 "Transleithanian Austria"
+HUN_TRANS_social_conservative:0 "Transleithanian Austria"
+HUN_TRANS_social_conservative_ADJ:0 "Hungarian"
+HUN_TRANS_social_conservative_DEF:0 "Transleithanian Austria"
+HUN_TRANS_social_democrat:0 "Transleithanian Austria"
+HUN_TRANS_social_democrat_ADJ:0 "Hungarian"
+HUN_TRANS_social_democrat_DEF:0 "Transleithanian Austria"
+HUN_TRANS_social_liberal:0 "Transleithanian Austria"
+HUN_TRANS_social_liberal_ADJ:0 "Hungarian"
+HUN_TRANS_social_liberal_DEF:0 "Transleithanian Austria"
 HUN_TRANS_authoritarian_democrat:0 "Transleithanian Austria"
 HUN_TRANS_authoritarian_democrat_ADJ:0 "Hungarian"
 HUN_TRANS_authoritarian_democrat_DEF:0 "Transleithanian Austria"
