Add party names for Illyria

--- a/localisation/KR_Illyria_l_english.yml
+++ b/localisation/KR_Illyria_l_english.yml
@@ -1,5 +1,27 @@
 ﻿l_english:
 
+### Parties ###
+ILL_totalist_party:0 "SRT"
+ILL_totalist_party_long:0 "Socijalistička radnička partija (od totalisti)"
+ILL_syndicalist_party:0 "SRS"
+ILL_syndicalist_party_long:0 "Socijalistička radnička partija (od sindikalisti)"
+ILL_radical_socialist_party:0 "SRP"
+ILL_radical_socialist_party_long:0 "Socijalistička radnička partija"
+ILL_social_democrat_party:0 "NSS"
+ILL_social_democrat_party_long:0 "Narodno-socijalistička stranka"
+ILL_social_liberal_party:0 "DS"
+ILL_social_liberal_party_long:0 "Demokratska stranka"
+ILL_market_liberal_party:0 "BSS"
+ILL_market_liberal_party_long:0 "Bunjevačko-šokačka stranka"
+ILL_social_conservative_party:0 "IPSS"
+ILL_social_conservative_party_long:0 "Ilirija pučka seljačka stranka"
+ILL_authoritarian_democrat_party:0 "IPS"
+ILL_authoritarian_democrat_party_long:0 "Ilirija pučka stranka"
+ILL_paternal_autocrat_party:0 "SP"
+ILL_paternal_autocrat_party_long:0 "Stranka prava"
+ILL_national_populist_party:0 "Ustaše"
+ILL_national_populist_party_long:0 "Ustaše"
+
 ### Events ###
 illyria.1.t:0 "Kingdom of Illyria"
 illyria.1.d:0 "The Triune Kingdom of Illyria, which consists of the former Kingdom of Croatia-Slavonia, Kingdom of Dalmatia and Condominium of Bosnia and Herzegovina was proclaimed after the Crisis in Austro-Hungary and German Intervention in 1922. The creation of Illyria was proposed by the loyal to Vienna Croatian aristocrats and officers of the Austro-Hungarian Army, who promised to be loyal to the Kaiser Otto and Austria, but claimed more autonomy and the end of the Hungarian rule on the lands of the South Slavs. Though the Triune Kingdom should have become a home for the Catholic Croats, Orthodox Serbs and Muslim Bosniaks, in fact there are a lot of controversies between these nations. The Serbs want to reunite with their Serbian Motherland, the Bosniaks want to get more independence, and the Croats, who have a relative majority in the country, want to strengthen their position in the country and reorganise it into the Great Croatia. But now the Austrians help us to secure the order of our Balkan Kingdom."
