Bug fixes for the american factions

--- a/localisation/KR_American_Civil_War_l_english.yml
+++ b/localisation/KR_American_Civil_War_l_english.yml
@@ -197,10 +197,9 @@ amcivwar.40.t:0 "The PSA Seizes Alaska"
 amcivwar.40.d:0 "The Pacific States of America seized Alaska because of security concerns. Troops have marched into Alaska and the governor of Alaska has welcomed them. With ongoing civil war, there is nothing we can do to prevent this...."
 amcivwar.40.a:0 "We Cannot Stop Them"
 amcivwar.41.t:0 "The President has Died"
-amcivwar.41.d:0 "The loss of Washington had put severe strain on the president and the president collapsed. The next morning he was dead and the administration was thrown into chaos."
+amcivwar.41.d:0 "The loss of Washington had put severe strain on the president and the president collapsed. The next morning he was dead and the administration was thrown into chaos. Some are arguing that Douglas MacArthur should take over in this crisis while others advocate that Vice President Quentin Roosevelt should now be in charge."
 amcivwar.41.a:0 "Hand over control to MacArthur"
-amcivwar.41.b:0 "Make MacArthur the Chief of Staff"
-amcivwar.41.c:0 "The army will stay under the control of the Government"
+amcivwar.41.b:0 "Power flows to Vice President Quentin Roosevelt"
 amcivwar.42.t:0 "California Leaves the Union due to War"
 amcivwar.42.d:0 "California left the USA because they did not feel that the government could protect them from the radicals in the country. There were some in the US government who said they were just protecting the money."
 amcivwar.42.a:0 "What? Why?"
