--- a/localisation/KR_Pacific_States_of_America_l_english.yml
+++ b/localisation/KR_Pacific_States_of_America_l_english.yml
@@ -331,11 +331,20 @@ pacificstates.12.e:0 "The army shall put an end to this chaotic democracy!"
 pacificstates.13.t:0 "Industrial Resources Added"
 pacificstates.13.d:0 "The industrial barons of the PSA have amassed these resources to be used by the government."
 pacificstates.13.a:0 "Excellent"
+pacificstates.14.t:0 "To Conscript or Volunteer?"
+pacificstates.14.d:0 "We are now on our own and as we build a new army in the Pacific, we must decide if we shall use a draft otherwise known as conscription for our army or if we shall rely on volunteers to make up the new Army of the Pacific. "
+pacificstates.14.a:0 "Institute the Draft"
+pacificstates.14.b:0 "A Volunteer Army"
+
+
+
 pacificstates.15.t:0 "Bank of the Pacific"
 pacificstates.15.d:0 "The independence of the PSA meant that an independent currency needed to be established and this was left to the Bank of the Pacific."
 pacificstates.15.a:0 "The Pacific dollar"
 
-pacificstates.33.a:0 "We will miss him"
+
+
+
 pacificstates.40.t:0 "Mexico Surrenders"
 pacificstates.40.d:0 "The war between the PSA and Mexico has been a disaster for the Mexicans. PSA forces have occupied most of the country and there is no way that the Mexican army can hold anymore. Surrender seems like the only option."
 pacificstates.40.a:0 "We surrender"
