--- a/localisation/KR_Mittelafrika_l_english.yml
+++ b/localisation/KR_Mittelafrika_l_english.yml
@@ -116,7 +116,7 @@ mittel.18.t:0 "Mittelafrika Takes Equatorial Guinea"
 mittel.18.d:0 "The German colonial government in Mittelafrika has seized our ex-colony in Equatorial Guinea, one of Syndicalism's holdouts in Africa is gone..."
 mittel.18.a:0 "Colonies are exploitative anyway"
 mittel.19.t:0 "Skull Roads"
-mittel.19.d:0 "Our first project using forced labour could be to build roads using forced labour from neighbouring villages. This will obviously anger the local natives but the infrastructure gained may be invaluable."
+mittel.19.d:0 "Our first project using forced labour could be to build roads using natives from neighbouring villages. This will obviously anger the locals but the infrastructure gained may be invaluable."
 mittel.19.a:0 "Implement the plan fully"
 mittel.19.b:0 "Implement parts of the plan"
 mittel.19.c:0 "Discard the plan"
