A lot of stuff...

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -29,7 +29,7 @@ FNG_informal_empire_5:0 "Mantetsu Dominance"
 FNG_expel_japanese_officers_tooltip:0 "Completing this focus will have dire consequences for Fengtian's relationship with Japan. \n"
 FNG_proclamation_tooltip:0 "Only complete this focus when prepared to begin the Reclamation War within a year. \n"
 FNG_mantetsu_collaboration_unlock:0 "Unlocks the Mantetsu Industrial Subsiduaries company. \n"
-FNG_manufacture_mingsheng_unlock:0 "Unlocks the Mingsheng Automobile Company. \n"
+FNG_manufacture_minsheng_unlock:0 "Unlocks the Minsheng Automobile Company. \n"
 FNG_incentivize_zaibatsu_arms_manufacture_unlock:0 "Unlocks the Mitsubishi Heavy Industries company. \n"
 FNG_standardize_equipment_unlock:0 "Unlocks the Mukden Arsenal company \n"
 FNG_remove_investment_dearth:0 "Helps remove the Investment Dearth national spirit. \n"
@@ -113,8 +113,8 @@ FNG_Mantetsu_Research_Wing_desc:0 "Mantetsu's Research Wing, known as 'Mantetsu 
 FNG_Mantetsu_Civil_Engineering_Projects:0 "Mantetsu Civil Engineering Projects"
 FNG_Mantetsu_Civil_Engineering_Projects_desc:0 "While the Japanese have much to benefit directly from large civil engineering projects in Fengtian, they also do so indirectly by helping to present our regime as successful at improving the everyday lives of citizens. In this respect, our interests are mutually shared."
 #Crossover Section
-FNG_Manufacture_Mingsheng:0 "Manufacture Mingsheng"
-FNG_Manufacture_Mingsheng_desc:0 "In late 1931 Zhang Zuolin's son, Xueliang, commissioned an American engineer to create China's first automotive vehicle, called 'Mingsheng' or 'people's livelihood'. Fearing compeition to their own vehicles, the Japanese made efforts to interrupt and stall mass-production, but now after many years the pieces have finally fallen into place."
+FNG_Manufacture_Minsheng:0 "Manufacture Minsheng"
+FNG_Manufacture_Minsheng_desc:0 "In late 1931 Zhang Zuolin's son, Xueliang, commissioned an American engineer to create China's first automotive vehicle, called 'Minsheng' or 'people's livelihood'. Fearing compeition to their own vehicles, the Japanese made efforts to interrupt and stall mass-production, but now after many years the pieces have finally fallen into place."
 FNG_Fengtian_Society_for_Light_Metals:0 "Fengtian Society for Light Metals"
 FNG_Fengtian_Society_for_Light_Metals_desc: "Significant deposits of Bauxite and Alunite have been known to exist in Liaoning for many years, but recent advances by Mantetsu sponsored laboratories in Fushun and Tokyo have enabled Aluminium production via a number of electro-chemical processes."
 FNG_Yalu_and_Songhua_Hydroelectricity:0 "Yalu and Songhua Hydroelectricity"
@@ -339,7 +339,7 @@ fengtian.18.d:0 "After we dropped out and refused to join the Qing they followed
 fengtian.18.a:0 "We must turn to the Qing, There is peace and power"
 fengtian.18.b:0 "Well good for them!"
 fengtian.19.t:0 "Kolchak has broken away from Japanese rule!"
-fengtian.19.d:0 "With Kolchak breaking away from the Japanese maybe we should consider our options. We could join him or we could look to the Qing."
+fengtian.19.d:0 "With Kolchak breaking away from the Japanese maybe we should consider our options. We could join him or we could look to the Qing, though this would mean joining in arms with our enemy of over a decade."
 fengtian.19.a:0 "Stay with Japan"
 fengtian.19.b:0 "Talk with Kolchak"
 fengtian.19.c:0 "Approach Pu Yi"
@@ -352,12 +352,14 @@ fengtian.21.d:0 "Almost as soon as they broke away from Japan, Fengtian approach
 fengtian.21.a:0 "Accept"
 fengtian.21.b:0 "Turn him down"
 fengtian.22.t:0 "Kolchak has refused our offer"
-fengtian.22.d:0 "With Kolchak's refusal we are treading deep water... Japan may attack us if we don't find support soon."
+fengtian.22.d:0 "With Kolchak's refusal we are treading in deep water..."
 fengtian.22.a:0 "We will be independent no matter what!"
 fengtian.22.b:0 "Approach Pu Yi"
 fengtian.23.t:0 "Remove our support"
-fengtian.23.d:0 "Zueling has betrayed us - me must immediately remove all aid from his pitiful country."
+fengtian.23.d:0 "Zhang Zuolin has entered talks with Kolchak - me must determine our response."
 fengtian.23.a:0 "Order the removal of support!"
+fengtian.23.b:0 "Declare War!"
+fengtian.23.c:0 "Do nothing."
 fengtian.24.t:0 "Japan has removed support from our country"
 fengtian.24.d:0 "Japan has ordered all development agencies, firms, and military aides to leave our country."
 fengtian.24.a:0 "Well what did you expect?"
@@ -366,7 +368,7 @@ fengtian.25.d:0 "With Pu Yi's refusal we are treading deep water... Japan may at
 fengtian.25.a:0 "Approach Kolchak"
 fengtian.25.b:0 "We will be independent no matter what!"
 fengtian.26.t:0 "Zhang Zuolin has also betrayed us!"
-fengtian.26.d:0 "Zhang Zuolin has betrayed us and joined the Qing Empire. This is an delicate situation."
+fengtian.26.d:0 "Zhang Zuolin has betrayed us and joined the Qing Empire. This is a delicate situation."
 fengtian.26.a:0 "We cannot risk further entanglements."
 fengtian.26.b:0 "Maybe the Qing would like to take his place as our ally?"
 fengtian.26.c:0 "We cannot be made fools of."
@@ -389,12 +391,12 @@ fengtian.30.a:0 "Run an election for the nobles!"
 fengtian.30.b:0 "Let Japan decide our fate!"
 fengtian.30.c:0 "Let the people of our great republic decide!"
 fengtian.31.t:0 "Our dear puppet needs our help."
-fengtian.31.d:0 "Yesterday the prime minister of our puppet Fengtian Republic died. They have now decided that we, as their master, should decide who will rule them."
+fengtian.31.d:0 "Yesterday the prime minister of our puppet Fengtian Government died. They have now decided that we, as their master, should decide who will rule them."
 fengtian.31.a:0 "Let's make them one of us forever!"
 fengtian.31.b:0 "Let the young marshal Zhang Xueliang rule the territory for us!"
 fengtian.31.c:0 "This is ridiculous! Let them decide themselves"
 fengtian.32.t:0 "A free election for the people!"
-fengtian.32.d:0 "For the first time the people of Fengtian Republic may vote in a free and fair election."
+fengtian.32.d:0 "For the first time the people of Fengtian Government may vote in a free and fair election."
 fengtian.32.a:0 "We need new blood in politics! Make Zhang Xueliang our new leader"
 fengtian.32.b:0 "Experienced politicians are always the best ones!"
 fengtian.32.c:0 "Let the Methodist Feng Yuxiang become our new ruler!"
@@ -406,8 +408,8 @@ fengtian.34.d:0 "Now when Japan let us choose our own leader we are entering a n
 fengtian.34.a:0 "We need new blood in politics! Make Zhang Xueliang our new leader"
 fengtian.34.b:0 "Experienced politicians are always the best ones!"
 fengtian.34.c:0 "Let the Methodist Feng Yuxiang become our new ruler!"
-fengtian.35.t:0 "The Fengtian Republic has a christian leader."
-fengtian.35.d:0 "During their election the other day, the people of Fengtian Republic has chosen their new wise leader. He has the same views as us shall we ask them for an alliance?"
+fengtian.35.t:0 "The Fengtian Government has a christian leader."
+fengtian.35.d:0 "During their election the other day, the people of Fengtian Government has chosen their new wise leader. He has the same views as us shall we ask them for an alliance?"
 fengtian.35.a:0 "Yes, ask them if they want to become our great friend."
 fengtian.35.b:0 "No! They may look like us on the outside, but on the inside we are the only true Christians!"
 fengtian.36.t:0 "The The Pure Kingdom Upon the Heavens asks for an alliance"
@@ -419,18 +421,18 @@ fengtian.37.t:0 "Japan demands our incorporation into empire"
 fengtian.37.d:0 "Japan has made the decision to incorporate our mighty republic into the Empire. But will our lords and people comply with such a decision? Or should we use this opportunity to break all ties with the Japanese empire?"
 fengtian.37.a:0 "We must obey"
 fengtian.37.b:0 "It is time to throw off the Japanese yoke!"
-fengtian.38.t:0 "Fengtian Republic accepts the inevitable"
-fengtian.38.d:0 "The Fengtian Republic accepted our decision of merging their republic with our empire."
+fengtian.38.t:0 "Fengtian Government accepts the inevitable"
+fengtian.38.d:0 "The Fengtian Government accepted our decision of merging their republic with our empire."
 fengtian.38.a:0 "Excellent."
-fengtian.39.t:0 "The Fengtian Republic rejects our decision"
-fengtian.39.d:0 "The Fengtian Republic rejected our decision to incorporate them into our empire as extremely offensive. Currently they are using this opportunity to sever all ties with us. How shall we react?"
+fengtian.39.t:0 "The Fengtian Government rejects our decision"
+fengtian.39.d:0 "The Fengtian Government rejected our decision to incorporate them into our empire as extremely offensive. Currently they are using this opportunity to sever all ties with us. How shall we react?"
 fengtian.39.a:0 "Accept their decision"
 fengtian.39.b:0 "Destroy them"
-fengtian.40.t:0 "Fengtian Republic would like us to join them as one Christian nation. Could that work?"
-fengtian.40.d:0 "A day ago we asked the new leader of the Fengtian Republic to start an alliance with us. They now think that we would fit better as one nation under the Christian banner."
+fengtian.40.t:0 "Fengtian Government would like us to join them as one Christian nation. Could that work?"
+fengtian.40.d:0 "A day ago we asked the new leader of the Fengtian Government to start an alliance with us. They now think that we would fit better as one nation under the Christian banner."
 fengtian.40.a:0 "As Christians we must accept this offer."
 fengtian.40.b:0 "No. An alliance is best for us."
-fengtian.40.c:0 "This is outrageous! Cut all relations with the Fengtian Republic!"
+fengtian.40.c:0 "This is outrageous! Cut all relations with the Fengtian Government!"
 fengtian.41.t:0 "Two republics as one!"
 fengtian.41.d:0 "The Shangqing Tiango or Heavenly Kingdom has accepted our annexation offer. This is a great chance to start a new era in Chinese politics!"
 fengtian.41.a:0 "We live & rule together as one government in one republic!"
@@ -555,8 +557,8 @@ fengtian.new.30.a:0 "Good news"
 fengtian.new.31.t:0 "Chinese Investment in Heilongjiang"
 fengtian.new.31.d:0 "With Japanese investment often flooding into heavy industry and mining, a group of local investors have decided to pool their resources in order to back two Chinese companies struggling against Mantetsu competition. The Dongdai Fertiliser company and Shanjing Packing Plant will both continue to help Fengtian's burgeoning soy industry expand."
 fengtian.new.31.a:0 "Good news"
-fengtian.new.32.t:0 "The Creation of Mingsheng Automobile Company"
-fengtian.new.32.d:0 "Thanks to the Mukden Arsenal's regular production of the Mingsheng Truck, a group of Communications Clique oligarchs have decided to fund the creation of a new company appropriately named 'Mingsheng Automobile Company', which will be spun off of the arsenal and take vehicular production into its own hands. Already a collection of young engineers, mostly educated in Japan, are studying the prospects of additional models."
+fengtian.new.32.t:0 "The Creation of Minsheng Automobile Company"
+fengtian.new.32.d:0 "Thanks to the Mukden Arsenal's regular production of the Minsheng Truck, a group of Communications Clique oligarchs have decided to fund the creation of a new company appropriately named 'Minsheng Automobile Company', which will be spun off of the arsenal and take vehicular production into its own hands. Already a collection of young engineers, mostly educated in Japan, are studying the prospects of additional models."
 fengtian.new.32.a:0 "Good news!"
 fengtian.new.33.t:0 "An End to the Investment Shortage"
 fengtian.new.33.d:0 "After roughly a decade of virtually no external or internal investment beyond the government's own, Fengtian has made itself a reliable and trustworthy location for prosperous growth. Going from strength to strength, and with the fires of industry behind us, our prospects of retaking Beijing are growing by the day."
@@ -750,6 +752,7 @@ fengtian.new.76.b:0 "Let us be diplomatic"
 
 fengtian.new.77.t:0 "Japan Declares War"
 fengtian.new.77.d:0 "In response to our expulsion of their officers, the Japanese Government has cut all ties and declared war! Many will look at this as a disaster, but perhaps it is an opportunity in disguise. The truth will be found on the battlefield."
+fengtian.new.77.d_breakaway:0 "In response to what they see as a violation of our commitment to cooperation, as well as the Thirteen Demmands of 1915, Japan has subsequently declared war 'in protection of its treaty rights and interests in China'."
 fengtian.new.77.a:0 "Zhonghua Mingguo Wansui!"
 
 fengtian.new.78.t:0 "Japan Delivers an Ultimatum"
